--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.0.1",
     "next-sanity": "^5.5.10",
     "next-themes": "^0.2.1",
+    "prism-react-renderer": "^2.1.0",
     "react": "^18",
     "react-dom": "^18"
   },
