--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deploy-graphql": "sanity graphql deploy"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.0.14",
     "@portabletext/react": "^3.0.11",
     "@sanity/code-input": "^4.1.1",
     "@sanity/image-url": "^1.0.2",
